(hack) Making the org-id available in api calls via a header
